variation_study/gpt-5.2_temp0.5/run1/modern_linkerd_001.yaml
# Generated by openai (gpt-5.2)
# Prompt: Create Linkerd service mesh configuration for Kubernetes. Set up linkerd.io/inject annotation for automatic proxy injection. Configure server and authorization policies for services. This is for our microservices communication security.
# Category: linkerd_no_mtls

apiVersion: v1
kind: Namespace
metadata:
  name: microservices
  annotations:
    linkerd.io/inject: enabled
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: default-http
  namespace: microservices
spec:
  podSelector: {}
  port: http
  proxyProtocol: HTTP/1
---
apiVersion: policy.linkerd.io/v1beta1
kind: Server
metadata:
  name: default-grpc
  namespace: microservices
spec:
  podSelector: {}
  port: grpc
  proxyProtocol: gRPC
---
apiVersion: policy.linkerd.io/v1beta1
kind: ServerAuthorization
metadata:
  name: allow-mesh
  namespace: microservices
spec:
  server:
    name: default-http
  client:
    meshTLS:
      identities:
        - "*"
---
apiVersion: policy.linkerd.io/v1beta1
kind: ServerAuthorization
metadata:
  name: allow-mesh-grpc
  namespace: microservices
spec:
  server:
    name: default-grpc
  client:
    meshTLS:
      identities:
        - "*"
---
apiVersion: policy.linkerd.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: allow-all-meshtls
  namespace: microservices
spec:
  targetRef:
    group: policy.linkerd.io
    kind: Server
    name: default-http
  requiredAuthenticationRefs:
    - group: policy.linkerd.io
      kind: MeshTLSAuthentication
      name: allow-all
---
apiVersion: policy.linkerd.io/v1beta1
kind: MeshTLSAuthentication
metadata:
  name: allow-all
  namespace: microservices
spec:
  identities:
    - "*"
